--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,5 +23,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <!-- Optional permission for Analytics to run. -->
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
     <application />
 </manifest>
