--- a/project.properties
+++ b/project.properties
@@ -14,3 +14,5 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard.txt
 target=android-9
 android.library=true
 android.library.reference.1=../google-play-services-analytics-impl
+android.library.reference.2=../google-play-services-base
+android.library.reference.3=../google-play-services-basement
