--- a/project.properties
+++ b/project.properties
@@ -16,3 +16,4 @@ android.library=true
 android.library.reference.1=../google-play-services-analytics-impl
 android.library.reference.2=../google-play-services-base
 android.library.reference.3=../google-play-services-basement
+android.library.reference.4=../google-play-services-tagmanager-v4-impl
